--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,10 @@ buildscript {
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+          classpath 'mysql:mysql-connector-java:8.0.12'
     }
 }
 
